<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_diet"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_calorie" />

        <item
            android:id="@+id/nav_workout"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_workout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_meals"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/menu_meals" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
